Updates and introduced Docker env vars